[gd_scene load_steps=6 format=2]

[ext_resource path="res://Marcador.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Objects/Coin/Assets/Coin.png" type="Texture" id=3]
[ext_resource path="res://Objects/DialogArea/Assets/Stranger.png" type="Texture" id=4]
[ext_resource path="res://Objects/Teleporter/Assets/Door.png" type="Texture" id=5]

[node name="marcador" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Contador" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_right = 126.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.898039, 0.231373, 0.0980392, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0 ] 0 -    0 -    0"

[node name="Coin" type="Sprite" parent="."]
modulate = Color( 0.403922, 0.403922, 0.403922, 1 )
position = Vector2( 17, 16 )
scale = Vector2( 2.125, 2.125 )
texture = ExtResource( 3 )

[node name="Stranger" type="Sprite" parent="."]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 179, 18 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="Door" type="Sprite" parent="."]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
position = Vector2( 282, 19 )
scale = Vector2( 2.125, 2.125 )
texture = ExtResource( 5 )

[node name="Timer" type="Label" parent="."]
margin_left = 950.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 2

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.711
autostart = true

[node name="Button" type="Button" parent="."]
margin_left = 381.0
margin_top = 135.0
margin_right = 609.0
margin_bottom = 212.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "New Game"

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
